find_package(Doxygen)
set_package_properties(Doxygen PROPERTIES TYPE OPTIONAL PURPOSE "Needed to build API documentation")
if (NOT DOXYGEN_FOUND)
  return()
endif()

set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_EXTRACT_PRIVATE YES)
set(DOXYGEN_EXTRACT_PRIV_VIRTUAL YES)
set(DOXYGEN_EXTRACT_STATIC YES)
set(DOXYGEN_EXCLUDE_PATTERNS "*.py")
set(DOXYGEN_SOURCE_BROWSER YES)
file(GLOB_RECURSE DOXYGEN_SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/*.cc ${PROJECT_SOURCE_DIR}/*.h)
doxygen_add_docs(doxygen ${DOXYGEN_SOURCES}
  USE_STAMP_FILE WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
  COMMENT "Build doxygen documentation")
